fix the scrollbar on the main content

--- a/static/styles.css
+++ b/static/styles.css
@@ -391,6 +391,30 @@ section.au-enter-active {
   z-index: 999;
 }
 
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 10px;
+}
+
+::-webkit-scrollbar:vertical {
+  width: 10px;
+}
+
+::-webkit-scrollbar:horizontal {
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  border: 2px solid #ffffff;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #ffffff;
+}
+
 @media screen and (min-width: 900px) {
   .content-block {
     position: absolute;
@@ -405,19 +429,8 @@ section.au-enter-active {
     margin-right: 190px;
   }
 
-  ::-webkit-scrollbar {
-    -webkit-appearance: none;
-    width: 10px;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(0, 0, 0, 0.5);
-    -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
-  }
-
   #scroller {
-    max-height: 100vh;
+    height: 100vh;
     overflow-y: scroll;
   }
 }
@@ -453,11 +466,24 @@ section.au-enter-active {
   .content-block {
     overflow-x: hidden;
   }
+
+  ::-webkit-scrollbar:vertical {
+    width: 0 !important;
+  }
+
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 0 !important;
+  }
 }
 
 @media screen and (max-width: 400px) {
   ::-webkit-scrollbar:vertical {
-    width: 0;
+    width: 0 !important;
+  }
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 0 !important;
   }
 }
 
